--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,10 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# Ignore local environment files
+.env.local
+
+
 # vercel
 .vercel
 
