--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^11.0.2",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
