--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.0.2",
