--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.0.2",
